--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ol type="1">
      <li>Playing Football</li>
      <li>Watching political documentries & following politics</li> 
-     <li>Going to new  </li> 
+     <li>Going to new places</li> 
      <li>Riding</li> 
      <li>Exercising</li>
     </ol>
